--- a/flat0.css
+++ b/flat0.css
@@ -97,3 +97,28 @@ h1{
     margin: 50px;
     font-family: "Playfair Display";
 }
+@media(max-width:600px){
+    main{
+        margin-top: 50px;
+    }
+    .text h4{
+        font-size: 30px;
+    }
+    main h1{
+        font-size: 40px;
+        margin: 50px 0;
+    }
+    .gallery{
+        float: none;
+        width: 100%;
+    }
+    .text{
+        float: none;
+        width: 100%;
+        margin: 20px 0;
+    }
+    iframe{
+        float: none;
+        width: 100%;
+    }
+}
