--- a/style.css
+++ b/style.css
@@ -465,6 +465,9 @@ footer{
     }
     .slide p {
         font-size: 16px;
+        box-sizing: border-box;
+        margin: 0 auto 50px;
+        width: 90%;
     }
     .pair .comment{
         width: 100%;
